--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicons/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/favicons/android-chrome-512x512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Silo Repo</title>
   </head>
   <body>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
