--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/favicons/android-chrome-512x512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Silo Repo</title>
+    <meta name="keywords" content="repo, portfolio, engineering, project, repository, network, silo, linkedin, github, social">
   </head>
   <body>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
