--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicons/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/favicons/android-chrome-512x512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.28/build/spline-viewer.js"></script>
     <title>Silo Repo</title>
     <meta name="keywords" content="repo, portfolio, engineering, project, repository, network, silo, linkedin, github, social">
   </head>
